libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_blueprint_config_from_json_string.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2023-04-20",
  "transform": [
    "celerity-2024-07-22"
  ],
  "variables": {
    "certificateId": {
      "type": "string",
      "description": "The ID of the certificate to use for the API domain."
    },
    "secretStoreId": {
      "type": "string",
      "description": "The ID of the secret store to use for storing secrets."
    }
  },
  "resources": {
    "getOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Get Order Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "GET",
          "celerity.handler.http.path": "/orders/{orderId}"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-GetOrderHandler-v1",
        "codeLocation": "./orders",
        "handler": "handlers.get_order",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO",
          "SECRET_STORE_ID": "${variables.secretStoreId}"
        }
      }
    },
    "ordersApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Orders API"
      },
      "spec": {
        "protocols": [
          "http"
        ],
        "cors": {
          "allowCredentials": true,
          "allowOrigins": [
            "https://example.com",
            "https://another.example.com"
          ],
          "allowMethods": [
            "GET",
            "POST"
          ],
          "allowHeaders": [
            "Content-Type",
            "Authorization"
          ],
          "exposeHeaders": [
            "Content-Length"
          ],
          "maxAge": 3600
        },
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            "/"
          ],
          "normalizeBasePath": false,
          "certificateId": "${variables.certificateId}",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": "jwt",
          "guards": {
            "jwt": {
              "type": "jwt",
              "issuer": "https://identity.twohundred.cloud/oauth2/v1/",
              "tokenSource": "$.headers.Authorization",
              "audience": [
                "https://identity.twohundred.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    }
  }
}
